--- a/_config.yml
+++ b/_config.yml
@@ -32,10 +32,10 @@ github_username:  "kissjgabi"
 # Build settings
 theme: minima
 
-plugins:
-  - jekyll-feed
-  - jekyll-sitemap
-  - jekyll-seo-tag
+# plugins:
+#  - jekyll-feed
+#  - jekyll-sitemap
+#  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
