--- a/_config.yml
+++ b/_config.yml
@@ -19,23 +19,32 @@
 # in the templates via {{ site.myvariable }}.
 
 title: K.I.S.S.
+longtitle: Keep it stupid simple
 email: b6@b6sics.hu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  entertaining scientific publications online
+
 baseurl: "/kiss"
 url: "https://kissjgabi.github.io"
 twitter_username: "kissjgabi"
 github_username:  "kissjgabi"
 
-# Build settings
-theme: minima
+slogan: "The experimental and practice site of the B6sicS SCHooL"
 
-# plugins:
+# Build settings
+# theme: minima
+
+#plugins:
 #  - jekyll-feed
 #  - jekyll-sitemap
 #  - jekyll-seo-tag
+
+plugins: 
+    - jekyll-paginate
+    - jekyll-archives
+
+paginate: 5
+paginate_path: /blog/page:num/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -57,8 +66,18 @@ theme: minima
 #   - vendor/gems/
 #   - vendor/ruby/
 
+
 collections:
   authors:
+    output: true
+
+  categories:
+    output: true
+
+  tags:
+    output: true
+
+  electroledges:
     output: true
 
 defaults:
@@ -67,6 +86,21 @@ defaults:
       type: "authors"
     values:
       layout: "author"
+  - scope:
+      path: ""
+      type: "categories"
+    values:
+      layout: "category"
+  - scope:
+      path: ""
+      type: "tags"
+    values:
+      layout: "tag"
+  - scope:
+      path: ""
+      type: "electroledges"
+    values:
+      layout: "electroledge"
   - scope:
       path: ""
       type: "posts"
