update stage one github.com/kissjgabi/kiss

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ url: "https://kissjgabi.github.io"
 twitter_username: "kissjgabi"
 github_username:  "kissjgabi"
 
-slogan: "The experimental and practice site of the B6sicS SCHooL"
+slogan: "The experimental site of the B6sicS SCHooL"
 
 # Build settings
 # theme: minima
